--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,26 +29,30 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-  sonar-nexus:
+  sonar:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, setup-java]
     steps:
     - name: SonarQube Scan
       run: mvn sonar:sonar -Dsonar.host.url=https://your-sonarqube-url
 
+  nexus-iq:
+    runs-on: ubuntu-latest
+    needs: [build, setup-java]
+    steps:
     - name: Nexus IQ Scan
       run: mvn org.sonatype.plugins:nexus-iq-maven-plugin:check
 
   run-tests:
     runs-on: ubuntu-latest
-    needs: sonar-nexus
+    needs: [sonar, nexus-iq]
     steps:
     - name: Run Unit Tests
       run: mvn test
 
   docker:
     runs-on: ubuntu-latest
-    needs: run-tests
+    needs: [build, setup-java, sonar, nexus-iq, run-tests]
     steps:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
