--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,26 +29,26 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-  sonar:
+  run-tests:
     runs-on: ubuntu-latest
     needs: [build, setup-java]
+    steps:
+    - name: Run Unit Tests
+      run: mvn test
+
+  sonar:
+    runs-on: ubuntu-latest
+    needs: [run-tests, build]
     steps:
     - name: SonarQube Scan
       run: mvn sonar:sonar -Dsonar.host.url=https://your-sonarqube-url
 
   nexus-iq:
     runs-on: ubuntu-latest
-    needs: [build, setup-java]
+    needs: [run-tests, build]
     steps:
     - name: Nexus IQ Scan
       run: mvn org.sonatype.plugins:nexus-iq-maven-plugin:check
-
-  run-tests:
-    runs-on: ubuntu-latest
-    needs: [sonar, nexus-iq]
-    steps:
-    - name: Run Unit Tests
-      run: mvn test
 
   docker:
     runs-on: ubuntu-latest
